--- a/packages/docs/src/pages/en-us/index.astro
+++ b/packages/docs/src/pages/en-us/index.astro
@@ -6,7 +6,7 @@ import Tech from '@/components/LandingFragments/Tech.astro'
 import Companies from '@/components/LandingFragments/Companies.astro'
 ---
 
-<Layout title="Univer">
+<Layout lang="en-us" title="Univer">
   <main>
     <Hero />
 
