--- a/packages/docs/src/pages/ja-jp/index.astro
+++ b/packages/docs/src/pages/ja-jp/index.astro
@@ -6,7 +6,7 @@ import Tech from '@/components/LandingFragments/Tech.astro'
 import Companies from '@/components/LandingFragments/Companies.astro'
 ---
 
-<Layout lang="zh-cn" title="Univer">
+<Layout lang="ja-jp" title="Univer">
   <main>
     <Hero />
 
