--- a/packages/docs/src/layouts/Layout.astro
+++ b/packages/docs/src/layouts/Layout.astro
@@ -4,13 +4,14 @@ import Footer from '@/components/Footer/index.astro'
 import Wrapper from '@/components/Wrapper/index.astro'
 
 interface Props {
+  lang: string
   title: string
 }
 
-const { title } = Astro.props
+const { lang, title } = Astro.props
 ---
 
-<Wrapper title={title}>
+<Wrapper lang={lang} title={title}>
   <Header />
   <slot />
   <Footer />
