docs: add how to get monaco editor instance

--- a/packages/docs/src/pages/playground.astro
+++ b/packages/docs/src/pages/playground.astro
@@ -11,7 +11,7 @@ const demo = [
         src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-n4v3qk?embed=1&file=%2Fsrc%2Fmain.ts'
       },
       {
-        title: 'Multi-instance',
+        title: 'Multi Instance',
         src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-multi-instance-4gqd6g?embed=1&file=%2Fsrc%2Fmain.tsx'
       },
       {
