--- a/packages/docs/src/components/Demo/index.module.less
+++ b/packages/docs/src/components/Demo/index.module.less
@@ -52,6 +52,8 @@
       a {
         height: 28px;
         padding: 0 12px;
+        color: currentColor;
+        text-decoration: none;
         display: flex;
         align-items: center;
         cursor: pointer;
