--- a/packages/docs/src/pages/playground.astro
+++ b/packages/docs/src/pages/playground.astro
@@ -8,15 +8,19 @@ const demo = [
     children: [
       {
         title: 'Vite',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-n4v3qk?embed=1&file=%2Fsrc%2Fmain.ts'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-n4v3qk?embed=1'
       },
       {
         title: 'Multi Instance',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-multi-instance-4gqd6g?embed=1&file=%2Fsrc%2Fmain.tsx'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-multi-instance-4gqd6g?embed=1'
+      },
+      {
+        title: 'Uniscript',
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-forked-5ndjz8?embed=1'
       },
       {
         title: 'Webpack 4',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-webpack-4-6lmwhv?embed=1&file=%2Fsrc%2Fmain.js'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-webpack-4-6lmwhv?embed=1'
       }
     ]
   }
