fix: fix the link of "concat us"

--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -23,7 +23,7 @@ const present = new Date().getFullYear()
   <nav class="nav">
     <div class="column">
       <label>{t('footer.nav.company.title')}</label>
-      <a href="/guides/introduction#商业授权">{t('footer.nav.company.concat')}</a>
+      <a href="/enterprises#获取商业版">{t('footer.nav.company.concat')}</a>
     </div>
     <div class="column">
       <label>{t('footer.nav.resource.title')}</label>
