--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -18,7 +18,7 @@ const l = useI18nUrl(lang);
       <nav class="nav">
         <a href={l('/guides/introduction')}>{t('header.docs')}</a>
         <a href={l('/api')}>{t('header.api')}</a>
-        <a href={l('/guides/introduction/#商业授权')}>{t('header.concat')}</a>
+        <a href={l('/enterprises#获取商业版')}>{t('header.concat')}</a>
       </nav>
     </section>
 
