docs: add custom function

--- a/packages/docs/src/pages/playground.astro
+++ b/packages/docs/src/pages/playground.astro
@@ -21,6 +21,10 @@ const demo = [
       {
         title: 'Webpack 4',
         src: 'https://codesandbox.io/p/devbox/univer-sheets-webpack-4-6lmwhv?embed=1'
+      },
+      {
+        title: 'Custom Function',
+        src: 'https://codesandbox.io/p/devbox/univer-custom-function-2c87nz?embed=1'
       }
     ]
   }
