--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -19,6 +19,7 @@ const l = useI18nUrl(lang);
         <a href={l('/guides/introduction')}>{t('header.docs')}</a>
         <a href={l('/api')}>{t('header.api')}</a>
         <a href={l('/enterprises#获取商业版')}>{t('header.concat')}</a>
+        <a href={l('/blog')}>{t('header.blog')}</a>
       </nav>
     </section>
 
