--- a/src/components/LandingFragments/Companies.astro
+++ b/src/components/LandingFragments/Companies.astro
@@ -144,7 +144,7 @@ const t = useTranslations(lang);
     display: grid;
     justify-content: center;
     gap: 2.2rem;
-    overflow: hidden;
+    // overflow: hidden;
 
     .line {
       display: flex;
