--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,28 +1,43 @@
 ---
-import { Github } from './Github/index'
 import { getLangFromUrl, useTranslations, useI18nUrl } from '@/i18n/utils';
+
+import { Locale } from './Locale/index'
+import { Github } from './Github/index'
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 const l = useI18nUrl(lang);
+
+const currentPath = Astro.url.pathname.replace(`/${lang}`, '')
+
+const langMap: Record<typeof lang, string> = {
+  'zh-cn': '简体中文',
+  'en-us': 'English',
+  'ja-jp': '日本語',
+};
 ---
 
 <header class="header">
   <div class="wrapper">
     <section class="left">
       <h1 class="title">
-        <img src="/logo.svg" alt="logo" />
-        <span class="hidden">Univer</span>
+        <a href={l('/')}>
+          <img src="/logo.svg" alt="logo" />
+          <span class="hidden">Univer</span>
+        </a>
       </h1>
 
       <nav class="nav">
         <a href={l('/guides/introduction')}>{t('header.docs')}</a>
         <a href={l('/api')}>{t('header.api')}</a>
         <a href={l('/enterprises#获取商业版')}>{t('header.concat')}</a>
+        <a href={l('/blog')}>{t('header.blog')}</a>
       </nav>
     </section>
 
     <section class="right">
+      <Locale client:load lang={langMap[lang]} currentPath={currentPath} />
+
       <a class="github" href="https://github.com/dream-num/univer">
         <Github client:load />
       </a>
