feat: add icon site

--- a/src/components/Hero/index.astro
+++ b/src/components/Hero/index.astro
@@ -12,7 +12,8 @@ const t = useTranslations(lang);
 
 <style lang="less" scoped>
 .hero {
-  height: 310px;
+  height: 15.5rem;
+  background: #f9fdff;
   display: flex;
   flex-direction: column;
   align-items: center;
