--- a/src/components/PostList/index.astro
+++ b/src/components/PostList/index.astro
@@ -50,6 +50,7 @@ const { posts = [] } = Astro.props
     padding: 0 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
     @media (max-width: 1024px) {
       grid-template-columns: repeat(1, 1fr);
     }
@@ -65,8 +66,10 @@ const { posts = [] } = Astro.props
       }
 
       .cover {
-        max-width: 100%;
+        height: 13.1rem;
+        width: 100%;
         border-radius: 24px 24px 0 0;
+        object-fit: cover;
       }
 
       .container {
