feat: update icon pages

--- a/src/pages/icons.astro
+++ b/src/pages/icons.astro
@@ -5,7 +5,7 @@ import Footer from '@/components/Footer/index.astro'
 ---
 
 <BlankLayout lang="zh-cn" title="图标库 | Univer">
-  <IconsPage client:load />
+  <IconsPage client:only />
 
   <Footer />
 </BlankLayout>
