--- a/src/components/IconsPage/index.module.less
+++ b/src/components/IconsPage/index.module.less
@@ -128,13 +128,25 @@
         line-height: 1.5;
       }
 
-      a {
-        padding: 0.4rem 0.6rem;
-        font-size: 0.75rem;
-        font-weight: 500;
-        background: rgba(39, 79, 238, 0.05);
-        border-radius: 6px;
-        cursor: pointer;
+      footer {
+        display: flex;
+        gap: 0.8rem;
+
+        a {
+          padding: 0.4rem 0.6rem;
+          font-size: 0.8rem;
+          font-weight: 500;
+          background: rgba(39, 79, 238, 0.05);
+          border-radius: 6px;
+          display: inline-flex;
+          align-items: center;
+          gap: 0.2rem;
+          cursor: pointer;
+
+          svg {
+            font-size: 1rem;
+          }
+        }
       }
     }
   }
@@ -182,5 +194,12 @@
     header {
       margin-bottom: 3.25rem;
     }
+  }
+
+  .container {
+    margin-bottom: 3rem;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    gap: 2rem;
   }
 }
