--- a/src/components/IconsPage/IconBox/index.module.less
+++ b/src/components/IconsPage/IconBox/index.module.less
@@ -1,5 +1,4 @@
 .box {
-
   .block {
     width: 100%;
     height: 7.6rem;
@@ -27,6 +26,15 @@
 
       &:hover {
         background-color: #F5F5F5;
+      }
+
+      .copying {
+        display: inline-flex;
+        gap: 0.2rem;
+
+        svg {
+          color: #409F11;
+        }
       }
     }
   }
