--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -32,7 +32,7 @@ const langMap: Record<typeof lang, string> = {
         <a href={l('/api')}>{t('header.api')}</a>
         <a href={l('/enterprises#获取商业版')}>{t('header.concat')}</a>
         <a href={l('/blog')}>{t('header.blog')}</a>
-        <a href={l('/icons')}>{t('header.icons')}</a>
+        <a href={'/icons'}>{t('header.icons')}</a>
       </nav>
     </section>
 
