--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -1,8 +1,9 @@
 ---
-import { getLangFromUrl, useTranslations } from '@/i18n/utils';
+import { getLangFromUrl, useTranslations, useI18nUrl } from '@/i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
+const l = useI18nUrl(lang);
 
 const present = new Date().getFullYear()
 ---
@@ -23,12 +24,14 @@ const present = new Date().getFullYear()
   <nav class="nav">
     <div class="column">
       <label>{t('footer.nav.company.title')}</label>
-      <a href="/enterprises#获取商业版">{t('footer.nav.company.concat')}</a>
+      <a href={l('/blog')}>{t('footer.nav.company.blog')}</a>
+      <a href={l('/enterprises#获取商业版')}>{t('footer.nav.company.concat')}</a>
     </div>
     <div class="column">
       <label>{t('footer.nav.resource.title')}</label>
-      <a href="/guides/introduction">{t('footer.nav.resource.docs')}</a>
+      <a href={l('/guides/introduction')}>{t('footer.nav.resource.docs')}</a>
       <a href="/api">{t('footer.nav.resource.api')}</a>
+      <a href="/icons">{t('footer.nav.resource.icons')}</a>
     </div>
     <div class="column">
       <label>{t('footer.nav.community.title')}</label>
@@ -38,7 +41,7 @@ const present = new Date().getFullYear()
     <div class="column">
       <label>{t('footer.nav.help.title')}</label>
       <a href="https://github.com/dream-num/univer/discussions">{t('footer.nav.help.github')}</a>
-      <a href="/guides/faq">{t('footer.nav.help.faq')}</a>
+      <a href={l('/guides/faq')}>{t('footer.nav.help.faq')}</a>
       <a href="https://github.com/dream-num/univer/issues">{t('footer.nav.help.bug')}</a>
     </div>
   </nav>
