--- a/src/components/Wrapper/index.astro
+++ b/src/components/Wrapper/index.astro
@@ -12,6 +12,16 @@ const { lang, title } = Astro.props
 <!doctype html>
 <html lang={lang}>
   <head>
+    <!-- Google Tag Manager -->
+    <script type="module">
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-KZSWKLNN');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <meta name="description" content="新一代开源办公套件,univer,sheet,doc,slide" />
     <meta name="viewport" content="width=device-width" />
@@ -20,6 +30,17 @@ const { lang, title } = Astro.props
   </head>
   <body>
     <slot />
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe
+      src="https://www.googletagmanager.com/ns.html?id=GTM-KZSWKLNN" 
+      height="0"
+      width="0"
+      style="display:none;visibility:hidden"
+    ></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
 
