fix: fix some problems of blog pages #43

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection } from 'astro:content'
+import dayjs from 'dayjs'
 
 import Layout from '@/layouts/Layout.astro'
 import Hero from '@/components/Hero/index.astro'
@@ -7,6 +8,10 @@ import PostList from '@/components/PostList/index.astro'
 
 const posts = await getCollection('blog', ({ data }) => {
   return data.lang === 'zh-cn'
+})
+
+posts.sort((a, b) => {
+  return dayjs(b.data.date).valueOf() - dayjs(a.data.date).valueOf()
 })
 ---
 
