--- a/src/components/Post/index.astro
+++ b/src/components/Post/index.astro
@@ -1,12 +1,12 @@
 ---
-import type { CollectionEntry } from 'astro:content'
+import type {CollectionEntry} from 'astro:content'
 import dayjs from 'dayjs'
 
 interface Props {
   post: CollectionEntry<'blog'>
 }
 
-const { post } = Astro.props
+const {post} = Astro.props
 ---
 
 <section class="post">
@@ -15,10 +15,12 @@ const { post } = Astro.props
       <h1>{post.data.title}</h1>
 
       <div class="meta">
-        <span>{post.data.author}</span>
         <span>
-          {dayjs(post.data.date).format('YYYY-MM-DD')}
+          {post.data.author}
         </span>
+        <time datetime={post.data.date.toString()}>
+          {dayjs(post.data.date).format('YYYY-MM-DD')}
+        </time>
       </div>
     </header>
 
@@ -56,9 +58,9 @@ const { post } = Astro.props
         gap: 0.5rem;
       }
     }
-    
+
     .article {
-      color: #1E222B;
+      color: #1e222b;
       line-height: 2;
       font-size: 1rem;
 
@@ -82,7 +84,7 @@ const { post } = Astro.props
         padding: 0 1rem;
         color: #999;
         font-style: italic;
-        border-left: 0.25rem solid #1E222B;
+        border-left: 0.25rem solid #1e222b;
       }
 
       :global(.expressive-code) {
@@ -92,9 +94,31 @@ const { post } = Astro.props
         }
       }
 
+      :global(.starlight-aside) {
+        margin: 1em 0;
+        padding: 0.2em 1em;
+        border-inline-start: 0.25rem solid;
+      }
+
+      :global(.starlight-aside--note) {
+        border-color: rgba(45, 174, 255);
+        background-color: rgba(45, 174, 255, 0.2);
+      }
+
+      :global(.starlight-aside__title) {
+        margin-bottom: 0;
+        font-weight: 500;
+        font-size: 1.1em;
+        display: inline-flex;
+        align-items: center;
+        gap: 0.2em;
+      }
+
       :global(a) {
-        color: #274FEE;
-        text-decoration: none;
+        color: #274fee;
+        &:hover {
+          color: #3A60F7;
+        }
       }
     }
   }
