fix: analytics code

--- a/src/components/Wrapper/index.astro
+++ b/src/components/Wrapper/index.astro
@@ -12,15 +12,15 @@ const { lang, title } = Astro.props
 <!doctype html>
 <html lang={lang}>
   <head>
-    <!-- Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RCVZZ25ZP4"></script>
     <script type="module">
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-KZSWKLNN');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RCVZZ25ZP4');
     </script>
-    <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8" />
     <meta name="description" content="新一代开源办公套件,univer,sheet,doc,slide" />
@@ -30,17 +30,6 @@ const { lang, title } = Astro.props
   </head>
   <body>
     <slot />
-
-  <!-- Google Tag Manager (noscript) -->
-  <noscript>
-    <iframe
-      src="https://www.googletagmanager.com/ns.html?id=GTM-KZSWKLNN" 
-      height="0"
-      width="0"
-      style="display:none;visibility:hidden"
-    ></iframe>
-  </noscript>
-  <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
 
