docs: update custom plugin guide

--- a/src/pages/playground.astro
+++ b/src/pages/playground.astro
@@ -23,6 +23,10 @@ const demo = [
         src: 'https://codesandbox.io/p/devbox/univer-sheets-webpack-4-6lmwhv?embed=1'
       },
       {
+        title: 'UMD',
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-umd-c9r4n5?embed=1'
+      },
+      {
         title: 'Custom Function',
         src: 'https://codesandbox.io/p/devbox/univer-custom-function-2c87nz?embed=1'
       }
