docs: add English ot blog

--- a/src/components/Wrapper/index.astro
+++ b/src/components/Wrapper/index.astro
@@ -43,4 +43,11 @@ const { lang, title } = Astro.props
 img {
   user-select: none;
 }
+
+hr {
+  margin: 48px auto;
+  width: 60%;
+  border: 1px solid #999;
+}
+
 </style>
