--- a/src/components/PostList/index.astro
+++ b/src/components/PostList/index.astro
@@ -61,6 +61,7 @@ const { posts = [] } = Astro.props
       border-radius: 24px;
       transform: all 0.15s;
       cursor: pointer;
+
       &:hover {
         box-shadow: 0 8px 24px 0 rgba(31, 35, 39, 0.06);
       }
@@ -70,6 +71,7 @@ const { posts = [] } = Astro.props
         width: 100%;
         border-radius: 24px 24px 0 0;
         object-fit: cover;
+        filter: brightness(0.95);
       }
 
       .container {
