--- a/src/pages/playground.astro
+++ b/src/pages/playground.astro
@@ -1,6 +1,6 @@
 ---
-import BlankLayout from '@/layouts/BlankLayout.astro'
 import { Demo } from '@/components/Demo'
+import BlankLayout from '@/layouts/BlankLayout.astro'
 
 const demo = [
   {
@@ -8,30 +8,30 @@ const demo = [
     children: [
       {
         title: 'Vite',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-n4v3qk?embed=1'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-n4v3qk?embed=1',
       },
       {
         title: 'Multi Instance',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-multi-instance-4gqd6g?embed=1'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-multi-instance-4gqd6g?embed=1',
       },
       {
         title: 'Uniscript',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-forked-5ndjz8?embed=1'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-vite-forked-5ndjz8?embed=1',
       },
       {
         title: 'Webpack 4',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-webpack-4-6lmwhv?embed=1'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-webpack-4-6lmwhv?embed=1',
       },
       {
         title: 'UMD',
-        src: 'https://codesandbox.io/p/devbox/univer-sheets-umd-c9r4n5?embed=1'
+        src: 'https://codesandbox.io/p/devbox/univer-sheets-umd-c9r4n5?embed=1',
       },
       {
         title: 'Custom Function',
-        src: 'https://codesandbox.io/p/devbox/univer-custom-function-2c87nz?embed=1'
-      }
-    ]
-  }
+        src: 'https://codesandbox.io/p/devbox/univer-custom-function-2c87nz?embed=1',
+      },
+    ],
+  },
 ]
 ---
 
