--- a/src/components/LandingFragments/Companies.astro
+++ b/src/components/LandingFragments/Companies.astro
@@ -1,8 +1,8 @@
 ---
-import { getLangFromUrl, useTranslations } from '@/i18n/utils';
+import { getLangFromUrl, useTranslations } from '@/i18n/utils'
 
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
 ---
 
 <section class="companies">
@@ -40,7 +40,6 @@ const t = useTranslations(lang);
     ))}
   </section>
 </section>
-
 
 <style lang="less" scoped>
 .companies {
