docs(faq): rename faq to troubleshooting and add notes

--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -41,7 +41,7 @@ const present = new Date().getFullYear()
     <div class="column">
       <label>{t('footer.nav.help.title')}</label>
       <a href="https://github.com/dream-num/univer/discussions">{t('footer.nav.help.github')}</a>
-      <a href={l('/guides/faq')}>{t('footer.nav.help.faq')}</a>
+      <a href={l('/guides/troubleshooting')}>{t('footer.nav.help.troubleshooting')}</a>
       <a href="https://github.com/dream-num/univer/issues">{t('footer.nav.help.bug')}</a>
     </div>
   </nav>
