fix(playground): add csv import

--- a/src/pages/playground.astro
+++ b/src/pages/playground.astro
@@ -92,6 +92,14 @@ const children: IEmbedProps[] = [
       openFile: 'src/main.ts',
     },
   },
+  {
+    title: 'CSV Import Plugin',
+    type: 'StackBlitz',
+    repoPath: 'awesome-univer/csv-import-plugin-demo',
+    openOptions: {
+      openFile: 'src/main.ts',
+    },
+  },
 ]
 
 const demo = [
