--- a/src/components/Sidebar/index.astro
+++ b/src/components/Sidebar/index.astro
@@ -1,80 +1,41 @@
 ---
-import MobileMenuFooter from '@astrojs/starlight/components/MobileMenuFooter.astro'
-import SidebarSublist from '@astrojs/starlight/components/SidebarSublist.astro'
+import Default from '@astrojs/starlight/components/Sidebar.astro'
 import type { Props } from '@astrojs/starlight/props'
-
-const { sidebar } = Astro.props
 ---
 
-<SidebarSublist sublist={sidebar} />
-<div class="md:sl-hidden">
-  <MobileMenuFooter {...Astro.props} />
-</div>
+<Default {...Astro.props}>
+  <slot />
+</Default>
 
-{/* This is intentionally inlined to avoid FOUSC. */}
-<script is:inline>
-  (() => {
-    const sidebarContent = document.getElementById('starlight__sidebar')?.firstElementChild
+<script>
+function isElementVisibleInContainer(element: Element, container: Element) {
+  const elementRect = element.getBoundingClientRect()
+  const containerRect = container.getBoundingClientRect()
 
-    if (sidebarContent) {
-      // open ancestor details of the active item
-      const activeLinkDetailElements = [
-        ...sidebarContent.querySelectorAll('details:has(a[aria-current="page"])')
-      ]
+  return (
+    elementRect.top >= containerRect.top
+    && elementRect.left >= containerRect.left
+    && elementRect.bottom <= containerRect.bottom
+    && elementRect.right <= containerRect.right
+  )
+}
 
-      activeLinkDetailElements.forEach((detail) => {
-        detail.setAttribute('open', '')
-      })
+// Function to persist scroll position on page change
+function setScrollPosition() {
+  const sidebar = document.querySelector('#starlight__sidebar')
+  const selectedMenuItem = document.querySelector(
+    '#starlight__sidebar a[aria-current=\'page\']',
+  )
+  if (
+    sidebar
+    && selectedMenuItem
+    && !isElementVisibleInContainer(selectedMenuItem, sidebar)
+  ) {
+    selectedMenuItem.scrollIntoView()
+  }
+}
 
-      const detailElements = [...sidebarContent.querySelectorAll('details')]
-
-      // Restore state from previous navigation
-      // (but keep the active item's ancestors open regardless)
-      const key = 'sl-sidebar-state'
-      const savedStateJson = sessionStorage.getItem(key)
-
-      if (savedStateJson) {
-        let savedState
-
-        try {
-          savedState = JSON.parse(savedStateJson)
-        } catch (e) {
-          console.error('Error parsing saved position:', e)
-        }
-
-        if (savedState) {
-          savedState.details.forEach((isOpen, i) => {
-            if (isOpen) {
-              detailElements[i].setAttribute('open', '')
-            } else if (!activeLinkDetailElements.includes(detailElements[i])) {
-              detailElements[i].removeAttribute('open')
-            }
-          })
-
-          sidebarContent.scrollTop = savedState.scrollTop
-        }
-      }
-
-      // Scroll the active list item into view if necessary
-      const activeLi = sidebarContent.querySelector('a[aria-current="page"]').parentElement
-      if (activeLi) {
-        const sidebarRect = sidebarContent.getBoundingClientRect()
-        const liRect = activeLi.getBoundingClientRect()
-        if (liRect.top < sidebarRect.top || liRect.bottom > sidebarRect.bottom) {
-          activeLi.scrollIntoView({ behavior: 'instant', block: 'nearest' })
-        }
-      }
-
-      // Save user state before navigating
-      window.addEventListener('beforeunload', () => {
-        sessionStorage.setItem(
-          key,
-          JSON.stringify({
-            details: detailElements.map((detail) => detail.hasAttribute('open')),
-            scrollTop: sidebarContent.scrollTop
-          })
-        )
-      })
-    }
-  })()
+window.addEventListener('DOMContentLoaded', () => {
+  setScrollPosition()
+})
 </script>
