feat: set default language to English

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -42,6 +42,9 @@ const currentPath = Astro.url.pathname.replace(`/${lang}`, '')
 
 <style lang="less" scoped>
 .header {
+  position: relative;
+  z-index: 1;
+
   .wrapper {
     margin: auto;
     height: 5.8rem;
