--- a/src/pages/ja-jp/icons.astro
+++ b/src/pages/ja-jp/icons.astro
@@ -3,7 +3,7 @@ import { IconsPage } from '@/components/IconsPage'
 import Layout from '@/layouts/Layout.astro'
 ---
 
-<Layout lang="en-us" title="Icons | Univer">
+<Layout lang="ja-jp" title="アイコン | Univer">
   <main>
     <IconsPage client:only />
   </main>
