--- a/src/pages/zh-cn/icons.astro
+++ b/src/pages/zh-cn/icons.astro
@@ -3,7 +3,7 @@ import { IconsPage } from '@/components/IconsPage'
 import Layout from '@/layouts/Layout.astro'
 ---
 
-<Layout lang="en-us" title="Icons | Univer">
+<Layout lang="zh-cn" title="图标库 | Univer">
   <main>
     <IconsPage client:only />
   </main>
