--- a/src/components/IconsPage/index.module.less
+++ b/src/components/IconsPage/index.module.less
@@ -13,6 +13,7 @@
   height: 3.6rem;
   background: #fff;
   box-shadow: 0 4px 24px 0 rgba(31, 35, 39, 0.04);
+  z-index: 2;
 
   .wrapper {
     height: 100%;
@@ -58,8 +59,10 @@
 }
 
 .main {
+  position: relative;
   padding: 2.8rem 0;
   background: #fff;
+  z-index: 1;
 
   .wrapper {
     header {
