--- a/src/pages/ja-jp/blog/[...slug].astro
+++ b/src/pages/ja-jp/blog/[...slug].astro
@@ -4,11 +4,13 @@ import { getCollection } from 'astro:content'
 import Post from '@/components/Post/index.astro'
 import Layout from '@/layouts/Layout.astro'
 
+export const prerender = true
+
 export async function getStaticPaths() {
   const blogEntries = await getCollection('blog')
 
   return blogEntries.map(entry => ({
-    params: { slug: entry.slug.replace('en-us/blog/', '') },
+    params: { slug: entry.slug.replace('blog/', '') },
     props: { entry },
   }))
 }
