--- a/src/pages/zh-cn/blog/index.astro
+++ b/src/pages/zh-cn/blog/index.astro
@@ -15,7 +15,7 @@ posts.sort((a, b) => {
 })
 ---
 
-<Layout lang="zh-cn" title="Blog | Univer">
+<Layout lang="zh-cn" title="博客 | Univer">
   <Hero />
 
   <PostList posts={posts} />
